--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,11 @@ set(CMAKE_C_COMPILER gcc)
 set(CMAKE_CXX_COMPILER g++)
 
 cmake_minimum_required(VERSION 3.0.0)
-project(Nebula VERSION 0.1.0)
+project(Nebula VERSION 1.0.0)
 
-add_executable(Nebula main.cpp)
+
+find_package(SDL2 REQUIRED)
+include_directories(${SDL2_INCLUDE_DIRS})
+
+add_executable(Nebula src/main.cpp)
+target_link_libraries(Nebula ${SDL2_LIBRARIES})
